# mbedtls-verify

./: .gitignore  CMakeLists.txt  README.md  key-data.txt  printkey.py
cmake/: FindMbedTLS.cmake
src/: mbedtls_verify.c
